--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download Wi-Fi Password</title>
+    <title>Ikke en rickroll :D</title>
 </head>
 <body>
-    <h1>Download Wi-Fi Password</h1>
-    <p>Click the button below to download the Wi-Fi password script.</p>
+    <h1>Download Here:</h1>
+    <p>Click the button :D.</p>
     <a href="Wifipassword.bat" download><button>Download</button></a>
 </body>
 </html>
